<resources>
    <string name="app_name">SmartCare</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_takemed">Take Medication</string>
    <string name="action_addmed">Add Medication</string>
    <string name="action_changedate">Set selected date as current date</string>
    <string name="action_delmed">Delete Medication</string>


    <!--aux-->
    <string name="ERROR" translatable="false">error</string>
    <string name="SUCCESS" translatable="false">success</string>
    <string name="OK">Ok</string>
    <string name="CANCEL">Cancel</string>
    <string name="SOS">yes</string>


    <!--messages-->
    <string name="ALERT_MSG">Alert!</string>
    <string name="ERROR_MSG">Error!</string>
    <string name="SUCCES_MSG">Success!</string>
    <string name="EMERGENCY_MSG">Emergency!</string>
    <string name="HELP_MSG">Help is on the way!</string>
    <string name="SOS_MSG">SOS</string>
    <string name="VALUE_NOT_SAVED_MSG">Could not save value.</string>
    <string name="MED_NOT_DETECTED_MSG">Unable to detect the medication. Please, try again.</string>
    <string name="ERROR_REGISTER_MSG">Could not Register in database. Try again.</string>
    <string name="ERROR_EMPTYTEXT">You need to fill in all fields.</string>
    <string name="ERROR_PASSWORDS">Passwords are not equal. Remember passwords should have at least 6 characters.</string>
    <string name="NOT_TODAY_MSG">You can only take today\'s medication.</string>
    <string name="NOT_PAST_MSG">You can only plan for the present and future days.</string>
    <string name="NOT_MEDS_MSG">You have no medications planned for today.</string>
    <string name="WRONG_MED_MSG">You have either taken a wrong medication or a bad picture.</string>
    <string name="MED_ALREADY_TAKEN_MSG">You have already taken today\'s medication.</string>
    <string name="NO_WEEKPLAN_MSG">You have not planned anything for the following week.</string>
    <string name="delete_med_msg">Successfully deleted</string>
    <string name="take_med_msg">Successfully consumed</string>


    <!--log in-->
    <string name="ERROR_CREDENTIALS">Error entering your credentials. Try again.</string>
    <string name="ERROR_DEVICE">Error getting information about the device. Try again. </string>
    <string name="ERROR_USER">Error getting information about the user. Try again. </string>


    <!--sign up-->
    <string name="ERROR_REGISTER">error register</string>
    <string name="SUCCESS_REGISTER">success register</string>
    <string name="ERROR_SIGNUP_MSG">Could not Sign Up in database. Try again.</string>

    <!--log out-->
    <string name="LOGOUT_ASK_MSG">Are you sure you want to log out\?</string>

    <!--camera & permissions messages-->
    <string name="CAMERA_MSG">Camera will open in order to take a new picture.</string>
    <string name="CAMERA_TITLE">Camera</string>
    <string name="PERMISSIONS_TITLE">Permissions</string>
    <string name="PERMISSIONS_DENIED">This app needs Camera and Storage permissions to work without restrictions. You can give those permissions in your phone\'s settings whenever you feel comfortable with it.</string>
    <string name="CAMERA_NO">This device does not have a camera.</string>
    <!--storage-->
    <string name="STORAGE_TITLE">Storage</string>
    <string name="STORAGE_DENIED">If the access to the storage is not granted, the app will present some limitations. You can allow us to access the storage in your phone\'s settings whenever you feel comfortable with it.</string>

    <!--sensors-->
    <string name="LIGHT_SENSOR_VALUES">Choose a light value between 0–255</string>
    <string name="ERROR_SENSORS">Error getting information about the sensors. Try again.</string>

    <!--settings-->
    <string name="ERROR_OLDPSW">Incorrect old password. Try again.</string>
    <string name="PSW_CHANGED">Password changed successfully.</string>
    <string name="PSW_NOTCHANGED">Password could not be changed. Try again.</string>

    <!--firebase-->
    <string name="USERS">users</string>
    <string name="DEVICES">devices</string>
    <string name="PLANNING">planning</string>
    <string name="LIGHT_SENSOR">lightSensor</string>
    <string name="TAP_SENSOR">tap</string>

    <!--planning-->
    <string name="EMPTY">empty</string>
    <string name="MED_SUCCESSFULLY_TAKEN">yes</string>
    <string name="MED_WRONGLY_TAKEN">wrong</string>
    <string name="MED_NOT_TAKEN">no</string>


    <!--names-->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sensors">Sensors</string>
    <string name="menu_planning">Planning</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="title_home">Home</string>
    <string name="title_login">Log In</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile_type_patient">Patient</string>
    <string name="profile_type_relative">Relative</string>
    <string name="humidity">HUMIDITY</string>
    <string name="presence">PRESENCE</string>
    <string name="tap">TAP</string>
    <string name="light">LIGHT</string>
    <string name="temperature">TEMPERATURE</string>
    <string-array name="meds_array">
        <item>Metadol</item>
        <item>Metaspirina</item>
    </string-array>
</resources>