<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smartcare_group4.ui.main.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.smartcare_group4.ui.main.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="name"
            app:argType="string"
            android:defaultValue="" />

    </fragment>

    <fragment
        android:id="@+id/nav_sensors"
        android:name="com.example.smartcare_group4.ui.main.sensors.SensorsFragment"
        android:label="@string/menu_sensors"
        tools:layout="@layout/fragment_sensors" />

    <fragment
        android:id="@+id/nav_planning"
        android:name="com.example.smartcare_group4.ui.main.planning.PlanningFragment"
        android:label="@string/menu_planning"
        tools:layout="@layout/fragment_planning" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.smartcare_group4.ui.main.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.smartcare_group4.ui.main.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>