<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="48dp"
    android:layout_marginBottom="10dp"
    tools:context=".ui.main.sensors.SensorsFragment">

    <TextView
        android:id="@+id/text_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/light"
        android:padding="6dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/text_lightValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_lightValue"
        android:layout_width="290sp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="LIGHT VALUE"
        app:layout_constraintBottom_toTopOf="@+id/lightSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_light" />

    <com.google.android.material.slider.Slider
        android:id="@+id/lightSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="255"
        android:stepSize="1.0"
        app:layout_constraintTop_toBottomOf="@+id/text_lightValue"
        app:layout_constraintBottom_toTopOf="@id/text_tap"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp" />


    <TextView
        android:id="@+id/text_tap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/tap"
        android:padding="6dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/tapLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightSlider"
        />


   <RelativeLayout
       android:id="@+id/tapLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/tapSeekBar"
        app:layout_constraintTop_toBottomOf="@id/text_tap"
        app:layout_constraintVertical_bias="0.12"
        tools:layout_editor_absoluteX="16dp">

       <Button
           android:id="@+id/removeBtn"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:layout_alignParentStart="true"
           android:layout_marginStart="35dp"
           android:background="@drawable/remove"
           android:backgroundTint="#C5BCBC" />

       <TextView
           android:id="@+id/text_tapValue"
           android:layout_width="200sp"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:text="TAP VALUE"
           android:textAlignment="center"
           android:textColor="@android:color/black"
           android:textSize="20sp" />

       <Button
           android:id="@+id/addBtn"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:layout_alignParentEnd="true"
           android:layout_marginEnd="35dp"
           android:background="@drawable/add"
           android:backgroundTint="#C5BCBC" />
   </RelativeLayout>

    <SeekBar
        android:id="@+id/tapSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/Widget.AppCompat.SeekBar.Discrete"

        android:max="5"
        android:progress="3"

        app:layout_constraintBottom_toTopOf="@id/text_presence"
        app:layout_constraintTop_toBottomOf="@id/tapLayout"
        />

    <TextView
        android:id="@+id/text_presence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/presence"
        android:padding="6dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/text_presenceValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapSeekBar"
        />
    <TextView
        android:id="@+id/text_presenceValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="PRESENCE VALUE"
        app:layout_constraintBottom_toTopOf="@id/text_humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_presence"
        />

    <TextView
        android:id="@+id/text_humidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/humidity"
        android:padding="6dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/teal_200"

        app:layout_constraintBottom_toTopOf="@id/humidityCircle"
        app:layout_constraintEnd_toStartOf="@id/text_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_presenceValue"
        />


    <com.google.android.material.progressindicator.CircularProgressIndicator

        android:id="@+id/humidityCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorSize="120dp"
        android:rotation="270"
        android:max="100"
        android:progress="25"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/temperatureCircle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_humidity"
        />
    <TextView
        android:id="@+id/text_humidityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="40%"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/temperatureCircle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_humidity"/>

    <TextView
        android:id="@+id/text_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/temperature"
        android:padding="6dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/teal_200"

        app:layout_constraintBottom_toTopOf="@id/temperatureCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_humidity"
        app:layout_constraintTop_toBottomOf="@+id/text_presenceValue"
        />

    <com.google.android.material.progressindicator.CircularProgressIndicator

        android:id="@+id/temperatureCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorSize="120dp"
        android:rotation="270"
        android:max="100"
        android:progress="25"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/humidityCircle"
        app:layout_constraintTop_toBottomOf="@+id/text_temperature"
        />

    <TextView
        android:id="@+id/text_temperatureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="40º"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/humidityCircle"
        app:layout_constraintTop_toBottomOf="@+id/text_temperature" />




</androidx.constraintlayout.widget.ConstraintLayout>